--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@types/lodash": "^4.14.52",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
+    "lodash": "^4.17.4",
     "ng2-bootstrap": "^1.3.2",
     "ng2-webstorage": "^1.5.0",
     "rxjs": "^5.0.1",
