--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "lodash": "^4.17.4",
+    "ng2-auto-complete": "^0.10.5",
     "ng2-bootstrap": "^1.3.2",
+    "ng2-typeahead": "^1.2.0",
     "ng2-webstorage": "^1.5.0",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
