--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
     "@types/lodash": "^4.14.52",
+    "angular2-chartist": "^0.11.0",
     "bootstrap": "^4.0.0-alpha.6",
+    "chartist": "^0.10.1",
     "core-js": "^2.4.1",
     "lodash": "^4.17.4",
     "ng2-auto-complete": "^0.10.5",
@@ -35,6 +37,7 @@
   },
   "devDependencies": {
     "@angular/compiler-cli": "^2.3.1",
+    "@types/chartist": "^0.9.34",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
     "angular-cli": "1.0.0-beta.28.3",
