--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@swimlane/ngx-datatable": "^6.0.2",
     "@types/lodash": "^4.14.52",
     "angular2-chartist": "^0.11.0",
     "bootstrap": "^4.0.0-alpha.6",
