--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "lodash": "^4.17.4",
     "ng2-auto-complete": "^0.10.5",
     "ng2-bootstrap": "^1.3.2",
-    "ng2-typeahead": "^1.2.0",
+    "ng2-validation": "^3.3.0",
     "ng2-webstorage": "^1.5.0",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
@@ -41,7 +41,7 @@
     "@types/chartist": "^0.9.34",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.28.3",
+    "angular-cli": "1.0.0-beta.30",
     "codelyzer": "~2.0.0-beta.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
