--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "@angular/router": "^3.3.1",
     "@swimlane/ngx-datatable": "^6.0.2",
     "@types/lodash": "^4.14.52",
-    "angular2-chartist": "^0.11.0",
     "bootstrap": "^4.0.0-alpha.6",
-    "chartist": "^0.10.1",
+    "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
     "lodash": "^4.17.4",
     "ng2-auto-complete": "^0.10.5",
     "ng2-bootstrap": "^1.3.2",
+    "ng2-charts": "^1.5.0",
     "ng2-validation": "^3.3.0",
     "ng2-webstorage": "^1.5.0",
     "rxjs": "^5.0.1",
