--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "biq-v2",
+  "name": "angular2-saas-starter",
   "version": "0.0.0",
   "license": "MIT",
   "angular-cli": {},
@@ -37,11 +37,11 @@
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
+    "@angular/cli": "^1.0.0-rc.0",
     "@angular/compiler-cli": "^2.3.1",
     "@types/chartist": "^0.9.34",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.30",
     "codelyzer": "~2.0.0-beta.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
