--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # compiled output
 /dist
 /tmp
+/out-tsc
 
 # dependencies
 /node_modules
@@ -13,8 +14,8 @@
 .classpath
 .c9/
 *.launch
-*.sublime-project
 .settings/
+*.sublime-workspace
 
 # IDE - VSCode
 .vscode/*
@@ -36,7 +37,6 @@ testem.log
 /e2e/*.js
 /e2e/*.map
 
-#System Files
+# System Files
 .DS_Store
 Thumbs.db
-*.sublime-workspace
